--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Wishi</h1>
+<h1>Welcome to Wishi</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+<p>Check out our 5 most recent blogs.</p>
 
 <%= link_to "Sign up",new_user_registration_path %>
 
