--- a/app/views/blog/new.html.erb
+++ b/app/views/blog/new.html.erb
@@ -1,1 +1,12 @@
 <h1>This is the new view for Blog</h1>
+<% if @blog.errors.any? %>
+<div class="error_messages">
+    <h2>You're missing some fields</h2>
+    <ul>
+      <% @blog.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= render :partial => 'form' %>
