--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,17 +3,23 @@
 <table>
   <thead>
     <tr>
-      <th>Text</th>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th colspan="0"></th>
+    </tr>
+  </thead>
+  
+   <thead>
+    <tr>
+      <th>Text</th>
+      <th colspan="0"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @blogs.each do |blog| %>
-      <tr>
-        <td><%= blog.text %></td>
-        <td><%= blog.title %></td>
+      <th>
+    <td><%= blog.title %></td>
+    <td><%= blog.text %></td>
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
