--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,23 +1,24 @@
 <h1>Listing blogs</h1>
-
 <table class="table">
 
+</table>
+ 
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="0"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
   
    <thead>
     <tr>
       <th>Text</th>
-      <th colspan="0"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @blogs.each do |blog| %>
+   <% @blogs.each do |blog| %>
       <th>
     <td><%= blog.title %></td>
     <td><%= blog.text %></td>
