fixing html files

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Wishi - The Fashionista Club.</title>
+<link rel="index.html.erb" href="404.html">
+</head>
+
 <h1>Welcome to Wishi</h1>
 
    <% @blogs.each do |blog| %>
