--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  background: url('./fashion1.jpg') no-repeat center center fixed;
+ -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
+ background-size: cover;
+ font-family: Georgia, serif;
+ color: #000000;
+}
+.list-box ul {
+  padding-left: 18px;
+  list-style: disc outside none;
+}
+
+.list-box ul li {
+  padding-left: 3px;
+  margin-bottom: 12px;
+.email {
+  background: url('images/email.png') no-repeat center center;
+}
+
+.facebook {
+  background: url('images/fb.png') no-repeat center center;
+}
+
+.twitter {
+  background: url('images/twitter.png') no-repeat center center;
+}
+
+.icon {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: 3px;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
