--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Wishi - The Fashionista Club.</title>
-<link rel="index.html.erb" href="404.html">
+	<title>Wishi.</title>
+<link rel="stylesheets" href="welcome.css.scss">
 </head>
-
 <h1>Welcome to Wishi</h1>
 
    <% @blogs.each do |blog| %>
@@ -23,4 +22,15 @@
 <%= button_to "Sign in",new_user_session_path %>
 
 <%= button_to("Sign out", destroy_user_session_path, :method => :delete) if user_signed_in? %>
+  
+					<li>
+    					<a href="mailto:wishi@fashionwishi.com" target="_blank" class="icon email"></a>
+  					</li>
+  					<li>
+    					<a href="https://twitter.com/fashionwishi" target="_blank" class="icon twitter"></a>
+  					</li>
+  					<li>
+    					<a href="https://www.facebook.com/fashionwishi" target="_blank" class="icon facebook"></a>
+  					</li>
+				</ul>
 
