--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
-  background-image: url('./fashion1.jpg') no-repeat center center fixed;
+  background-image: url('images/fashion1.jpg') no-repeat center center fixed;
+
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
