fixed and added images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Wishi - The Fashionista Club</title>
  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>   
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link rel="stylesheets" href="welcome.css.scss">
 </head>
 <body>
 <div class="container"> 
@@ -13,3 +12,18 @@
  </div>
 </body>
 </html>
+
+
+  <div class="lists">
+			<div class="list-box">
+					<li>
+    					<a href="mailto:wishi@fashionwishi.com" target="_blank" class="icon email"></a>
+  					</li>
+  					<li>
+    					<a href="https://twitter.com/fashionwishi" target="_blank" class="icon twitter"></a>
+  					</li>
+  					<li>
+    					<a href="https://www.facebook.com/fashionwishi" target="_blank" class="icon facebook"></a>
+  					</li>
+    </div>
+  </div>
