--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,35 @@
  // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body{
+  background: image_url('fashion3.jpg') no-repeat center center fixed;
+
+ -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
+ background-size: cover;
+ font-family: Georgia, serif;
+ color: #000000;
+}
+.email {
+  background: image_url('email.png') no-repeat center center;
+}
+.facebook {
+  background: image_url('fb.png') no-repeat center center;
+}
+.twitter {
+  background: image_url('twitter.png') no-repeat center center;
+}
+
+.icon {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: 3px;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  
